--- a/style.css
+++ b/style.css
@@ -1,4 +1,42 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+    background-color: black;
+    font-family: Arial;
+    color: black;
+    margin: 40px;
+}
+.mainDiv {
+    background-color: white;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    padding: 60px;
 
+}
+.mainDiv h1{
+    color: gray;
+    font-family: Verdana;
+    text-align: center;
+}
+
+.subDiv{
+    display: flex;
+    justify-content: center;
+}
+
+
+footer{
+
+    background-color:white;
+    color: black;
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    padding-bottom: 20px;
+}
+
+footer p{
+    margin: 0 0 0 20px;
+}
+
+table td{
+    padding-bottom: 10px;
+}
 
